# Zametka-DBS

./: 2026-07-01.md  LICENSE  README.md  Zametka.spec  app.py  build.bat  build.py  mockup.html  requirements.txt
assets/: icons.py
zametka-core/: Cargo.toml  pyproject.toml
zametka-core/src/: config.rs  language.rs  lib.rs  markdown.rs  search.rs
zametka_dbs/core/: __init__.py  config.py  event_bus.py  file_assoc.py
zametka_dbs/graph/: data.py  layout.py
zametka_dbs/markdown/: md_handbook.py  templates.py  wikilinks.py
zametka_dbs/preview/: __init__.py  renderer.py  renderer_py.py  styles.py
zametka_dbs/search/: engine_py.py
zametka_dbs/ui/: backlinks_panel.py  code_editor.py  file_tree_widget.py  graph_view.py  html_browser.py  language_highlighters.py  line_gutter.py  main_window.py  pinned_widget.py  preview_widget.py  search_widget.py  syntax_highlighter.py
