[package]
name = "zametka-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "zametka_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comrak = "0.30"
regex = "1"
unicode-segmentation = "1"
